2013-09-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfnames.c: Fix (x)dvipdfm-bkm.test (notjump).

2013-09-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfnames.[ch], pdfobj.c, specials.c: Fix (x)dvipdfm-res.test
	(tikz-bug).

	* tests/annot.{dvi,tex}: Test a broken link annotation.

2013-09-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxcrypt.h, dpxcrypt.c: Use uint32_t instead of unsigned long to
	calculate MD5, because it leads to an error if compiled with clang
	on 64bit OS X, reported by T. Yamamoto.

2013-09-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* (x)dvipdfm-bkm.test: Additional tests with bookmarks.
	* tests/bookm.{dvi,tex}: Additional test input files.
	* Makefile.am: Adapted.

2013-09-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* spc_util.c: This file is identical for dvipdfmx and xdvipdfmx,
	now part of libutil.a.

2013-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* epdf.c (add_stream_flate): Use z_const.
	* pdfobj.c (pdf_add_stream_flate): Use z_const.

2013-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfmx.c (show_usage): Adapt to modified program (stdin).
	* xdvipdfm-psz.test: Fixed a typo (found by Mojca Miklavec).

2013-08-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: pdf_filename should not be NULL to compare it with
	a string.

2013-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfmx.[ch]: Declare and define 'char *my_name' as
	"dvipdfmx" or "xdvipdfmx" and use it instead of PROGNAME.
	* pdfdoc.c, pdfencrypt.c: Use my_name instead of PACKAGE.

	* dvipdfmx.c, pdfobj.c: Use option '-o -' for output to stdout.

	* dvipdfmx.c, dvi.c: Allow dvipdfmx to read from stdin.

	* pdfobj.c (write_dict): Drop '\n' saving a few kb.

	* pdfcolor.[ch], pdfdev.c, pdfdraw.[ch], spc_pdfm.c: Always use
	dvipdfmx type color handling.

	* agl.c, cmap_write.c, dpxutil.c, jpegimage.c, otl_conf.c,
	pdfcolor.c, pdfresource.c, pngimage.c, pst.c, pst_obj.c,
	spc_misc.c, tfm.c, vf.c, xbb.c: These files are identical for