@@ -777,19 +777,6 @@ write_boolean (pdf_boolean *data, FILE *file)
   }
 }
 
-#ifdef XETEX
-void
-pdf_set_boolean (pdf_obj *object, char value)
-{
-  pdf_boolean *data;
-
-  TYPECHECK(object, PDF_BOOLEAN);
-
-  data = object->data;
-  data->value = value;
-}
-#endif
-
 char
 pdf_boolean_value (pdf_obj *object)
 {
@@ -1108,30 +1095,6 @@ release_name (pdf_name *data)
   }
   RELEASE(data);
 }
-
-#ifdef XETEX
-void
-pdf_set_name (pdf_obj *object, const char *name)
-{
-  pdf_name *data;
-  unsigned length;
-
-  TYPECHECK(object, PDF_NAME);
-
-  length = strlen(name);
-  data   = object->data;
-  if (data->name != NULL) {
-    RELEASE(data->name);
-  }
-  if (length != 0) {
-    data->name = NEW(length+1, char);
-    memcpy(data->name, name, length);
-    data->name[length] = 0;
-  } else {
-    data->name = NULL;
-  }
-}
-#endif
 
 char *
 pdf_name_value (pdf_obj *object)
@@ -2148,105 +2111,6 @@ pdf_release_obj (pdf_obj *object)
     RELEASE(object);
   }
 }
-
-#ifdef XETEX
-/* Copy object data without changing object label. */
-void
-pdf_copy_object (pdf_obj *dst, pdf_obj *src)
-{
-  if (!dst || !src)
-    return;
-
-  switch (dst->type) {
-  case PDF_BOOLEAN:  release_boolean(dst->data);  break;
-  case PDF_NULL:     release_null(dst->data);     break;
-  case PDF_NUMBER:   release_number(dst->data);   break;
-  case PDF_STRING:   release_string(dst->data);   break;
-  case PDF_NAME:     release_name(dst->data);     break;
-  case PDF_ARRAY:    release_array(dst->data);    break;
-  case PDF_DICT:     release_dict(dst->data);     break;
-  case PDF_STREAM:   release_stream(dst->data);   break;
-  case PDF_INDIRECT: release_indirect(dst->data); break;
-  }
-
-  dst->type = src->type;
-  switch (src->type) {
-  case PDF_BOOLEAN:
-    dst->data = NEW(1, pdf_boolean);
-    pdf_set_boolean(dst, pdf_boolean_value(src));
-    break;
-  case PDF_NULL:
-    dst->data = NULL;
-    break;
-  case PDF_NUMBER:
-    dst->data = NEW(1, pdf_number);
-    pdf_set_number(dst, pdf_number_value(src));
-    break;
-  case PDF_STRING:
-    dst->data = NEW(1, pdf_string);
-    pdf_set_string(dst,
-		   pdf_string_value(src),
-		   pdf_string_length(src));
-    break;
-  case PDF_NAME:
-    dst->data = NEW(1, pdf_name);
-    pdf_set_name(dst, pdf_name_value(src));
-    break;
-  case PDF_ARRAY:
-    {
-      pdf_array *data;
-      unsigned long i;
-
-      dst->data = data = NEW(1, pdf_array);
-      data->size = 0;
-      data->max  = 0;
-      data->values = NULL;
-      for (i = 0; i < pdf_array_length(src); i++) {
-	pdf_add_array(dst, pdf_link_obj(pdf_get_array(src, i)));
-      }
-    }
-    break;
-  case PDF_DICT:
-    {
-      pdf_dict *data;
-
-      dst->data = data = NEW(1, pdf_dict);
-      data->key   = NULL;
-      data->value = NULL;
-      data->next  = NULL;
-      pdf_merge_dict(dst, src);
-    }
-    break;
-  case PDF_STREAM:
-    {
-      pdf_stream *data;
-
-      dst->data = data = NEW(1, pdf_stream);
-      data->dict = pdf_new_dict();
-      data->_flags = ((pdf_stream *)src->data)->_flags;
-      data->stream_length = 0;
-      data->max_length    = 0;
-
-      pdf_add_stream(dst, pdf_stream_dataptr(src), pdf_stream_length(src));
-      pdf_merge_dict(data->dict, pdf_stream_dict(src));
-    }
-    break;
-  case PDF_INDIRECT:
-    {
-      pdf_indirect *data;
-
-      dst->data = data = NEW(1, pdf_indirect);
-      data->pf     = ((pdf_indirect *) (src->data))->pf;
-      data->obj    = ((pdf_indirect *) (src->data))->obj;
-      data->label  = ((pdf_indirect *) (src->data))->label;
-      data->generation = ((pdf_indirect *) (src->data))->generation;
-    }
-    break;
-  }
-
-  return;
-}
-#endif
 
 static int
 backup_line (FILE *pdf_input_file)
